fix: add title field for grpc call